# Polaris

./: .env.example  .gitignore  .polaris_experiment_stage0a_generator_selection__llama33_naive_combined.yaml  .polaris_experiment_stage0a_generator_selection__mistral_large_2407_naive_combined.yaml  .polaris_experiment_stage0a_generator_selection__mixtral8x22b_naive_combined.yaml  .polaris_experiment_stage2_validity_tuning__stage.yaml  Dockerfile.api  Dockerfile.embed  Dockerfile.eval  Dockerfile.frontend  Dockerfile.mlflow  Dockerfile.streamlit  LICENSE  METHODOLOGY.md  README.md  create_evaluation_dataset.ipynb  docker-compose.gaudi.yaml  docker-compose.yaml  pyproject.toml  support_ticket_analysis.ipynb
.github/workflows/: ci.yml
config/: config.base.yaml  config.gaudi.qwen32_eval_local.yaml  config.gaudi.yaml  config.local.yaml  config.yaml
config/weights/: validity_reranker.dev_v1.yaml  validity_reranker.dev_v2.yaml  validity_reranker.dev_v3.yaml  validity_reranker.protocol.yaml
data/authority/: registry.local_official.v1.json  registry.official_combined.v1.json  review_queue.local_official.v1.csv  source_register.external_v1.yaml
data/storage/support_docs_stage0a/: docstore.json
data/synthetic/: MANIFEST.json  README.md  tickets.jsonl
data/synthetic/eval/: MANIFEST.json  ragas_one_hop_synthetic.dev.jsonl  ragas_one_hop_synthetic.jsonl  ragas_one_hop_synthetic.test.jsonl
data/test/: benchmark_annotation_codebook_v1.md  benchmark_annotations_final.csv  docstore.json  eval_categories.json  eval_dateset.txt  eval_ticket_keys.txt  evaluation_tickets.txt  gold_standard_final.txt  gold_standard_v1.txt  gold_standard_v2.txt  prepared_eval_dataset_final.json  prepared_test_rows.json  ragas_one_hop_eval_dataset_final.dev.jsonl  ragas_one_hop_eval_dataset_final.jsonl  ragas_one_hop_eval_dataset_final.split_report.json  ragas_one_hop_eval_dataset_final.test_ids.txt  ragas_one_hop_eval_dataset_v1.dev.jsonl  ragas_one_hop_eval_dataset_v1.jsonl  ragas_one_hop_eval_dataset_v1.test.jsonl
data/test/benchmark_analysis_final/: composition_combinations.csv  composition_counts.csv  composition_summary.json
data/test/benchmark_analysis_protocol_final/: composition_summary.md
data/ui_feedback/: feedback.jsonl
docs/: portfolio-case-study.md  ui-functionality-summary.md
embed_server/: __init__.py  app.py
experiments/: _stage0c_dense_bm25.yaml  protocol.final.yaml  protocol.template.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/nginx/: default.conf  runtime-config.sh
frontend/public/: runtime-config.js
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/app/: api.ts  runtime.ts  scenarios.ts  state.test.tsx  state.tsx  types.ts  utils.ts
frontend/src/components/: AnswerCard.tsx  AppShell.tsx  Brand.tsx  DiagnosticsPanel.tsx  ErrorCard.tsx  ExpandablePanel.tsx  LoadingLabel.tsx  PromptComposer.tsx
frontend/src/pages/: AssistantPage.test.tsx  AssistantPage.tsx  EvaluationPage.test.tsx  EvaluationPage.tsx  SystemPage.test.tsx  SystemPage.tsx
frontend/src/test/: renderApp.tsx  setup.ts
prompts/: anonymisation_prompt.jinja2
report/muthesis-example/: abbreviations.tex  abstract.tex  appendix1.aux  appendix1.tex  appendix2.aux  appendix2.tex  appendix3.aux  appendix3.tex  chapter1.aux  chapter1.tex  chapter2.aux  chapter2.tex  chapter3.aux  chapter3.tex  chapter4.aux  chapter4.tex  chapter5.aux  chapter5.tex  chapter6.aux  chapter6.tex  chapter7.aux  chapter7.tex  chapter8.aux  chapter8.tex  muthesis.cls  plots.ipynb  refs.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.lof  report.lot  report.out  report.tex  report.toc  report_outline_summary.md
report/muthesis-example/graphs/: polaris_architecture.tex  polaris_query_flow.tex  polaris_reranking.fdb_latexmk  polaris_reranking.fls  polaris_reranking.tex  scope_task_workflow.tex  slide4_what_i_built.fdb_latexmk  slide4_what_i_built.fls  slide4_what_i_built.tex
scripts/: analyze_eval_runs.py  benchmark_analysis.py  benchmark_annotations.py  build_authority_registry.py  build_external_authority_registry.py  count_docstore_tickets.py  create_dev_test_sets.py  evaluate_rag.py  generate_synthetic_corpus.py  generate_synthetic_eval.py  ingest_external_docs.py  ingest_html_documents.py  ingest_jira_tickets.py  register_prompts_mlflow.py  tune_validity_reranker.py
scripts/experiments/: prep_and_eval_stage0b.sh  prepare_stage0a_generator_models.sh  render_config.py  run_stage.py  summarize_stage.py
scripts/gaudi/: Dockerfile.vllm-gaudi  build_vllm_gaudi_image.sh  haproxy_eval.cfg  run_haproxy_eval_lb.sh  run_llama33_70b_single.sh  run_mistral_large_2407.sh  run_qwen32_eval_pool.sh  run_tgi_gaudi.sh  run_vllm_server.sh  setup_eval.sh
src/polaris_rag/: __init__.py
src/polaris_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/polaris_rag/app/: api.py  container.py  demo_anonymizer.py  readiness.py
src/polaris_rag/authority/: __init__.py  registry_builder.py  service_catalog.py  source_register.py
src/polaris_rag/cli/: __init__.py  analyze_eval_runs.py  backfill_qdrant_docstores.py  benchmark_analysis.py  benchmark_annotations.py  build_authority_registry.py  build_external_authority_registry.py  count_docstore_tickets.py  create_dev_test_sets.py  evaluate_rag.py  (+8 more)
(+1564 files in other folders)
